--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <!-- done -->
     <header>
+        <!-- nav bar is here -->
         <nav class="navbar">
             <div class="logo">
                 <img src="/logo2.jpg" alt="logo image">
