--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/icode.css">
   </head>
 <body>
+    <!-- jhjgjfhjg -->
     <!-- done -->
     <header>
         <!-- nav bar is here -->
@@ -34,15 +35,22 @@
             </div>
         </nav>
     </header>
+    <!-- end header -->
     <!-- hero -->
     <section class="hero" id="hero">
-        <div class="uche-container">
+        <div class="hero-image">
+            <div class="hero-text">
+                <h2>I am Brownhill</h2>
+                <p>I am a programmer</p>
+            </div>
+        </div>
+        <!-- <div class="uche-container">
             <img src="/hero.jpg" class="ivie-image"  alt="Hero Image">
             <div class="hero-content">
                 <h2>brownportal</h2>
                 <p>..creating the difference... </p>
             </div>
-        </div>
+        </div> -->
     </section>
 </body>
 </html>
