--- a/index.html
+++ b/index.html
@@ -50,14 +50,7 @@
             </div>
         </section>
         <!-- You can add this to your CSS -->
-        <style>
-            .hero img {
-                width: 100%;
-                height: 50vh;
-                object-fit: cover;
-                object-position: center;
-            }
-        </style>
+   
 
         <!-- Class-act -->
         <section class="class-act">
@@ -79,21 +72,45 @@
                             </div>
                         </div>
                     </div>
+                    <div class="class-card">
+                        <img src="/hero.jpg" alt="class image">
+                        <div class="card-info">
+                            <div class="card-profile">
+                                <img src="/logo2.jpg" alt="profile image">
+                            </div>
+                            <div class="card-text">
+                                <h3>Progress and Jake</h3>
+                                <p>updated Aug, 2023</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="class-card">
+                        <img src="/hero.jpg" alt="class image">
+                        <div class="card-info">
+                            <div class="card-profile">
+                                <img src="/logo2.jpg" alt="profile image">
+                            </div>
+                            <div class="card-text">
+                                <h3>Progress and Jake</h3>
+                                <p>updated Aug, 2023</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="class-card">
+                        <img src="/hero.jpg" alt="class image">
+                        <div class="card-info">
+                            <div class="card-profile">
+                                <img src="/logo2.jpg" alt="profile image">
+                            </div>
+                            <div class="card-text">
+                                <h3>Progress and Jake</h3>
+                                <p>updated Aug, 2023</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
-        <style>
-            .class-act {
-                border: solid;
-            }
-            .class-act .title {
-                text-align: center;
-                margin: 20px auto;
-            }
-            .class-act .class-body {
-                border: solid;
-            }
-        </style>
 
     </body>
 
